tests/ui/did_you_mean/issue-36798_unknown_field.stderr
error[E0609]: no field `zz` on type `Foo`
  --> $DIR/issue-36798_unknown_field.rs:7:7
   |
LL |     f.zz;
   |       ^^ unknown field
   |
   = note: available fields are: `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
